# my-site

./: 404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
cv/: index.html
docs/: cv.md  index.md  projects.md
docs/stylesheets/: extra.css
lucarammel/: mkdocs.yml
lucarammel/docs/: contact.md  index.md  projects.md
lucarammel/site/: 404.html  index.html  sitemap.xml
lucarammel/site/contact/: index.html
lucarammel/site/cv/: index.html
lucarammel/site/projects/: index.html
lucarammel/site/search/: search_index.json
projects/: index.html
search/: search_index.json
site/: 404.html  index.html
site/cv/: index.html
site/projects/: index.html
site/stylesheets/: extra.css
