[tool.poetry]
name = "lucarammel-portfolio"
version = "0.1.0"
description = ""
authors = ["lucarammel <lucaspereira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
